@@ -212,17 +212,20 @@ static void clear_glob (glob_t *pglob)
 }
 
 static void match_in_directory (const char *path, const char *pattern, int opts,
-				glob_t *pglob)
+				glob_t *pglob, size_t *allocated)
 {
 	struct dirent_hashent *cache;
-	size_t allocated = 4;
+	size_t my_allocated = 0;
 	int flags;
 	regex_t preg;
 	struct pattern_bsearch pattern_start;
 	char **bsearched;
 	size_t i;
 
-	clear_glob (pglob);
+	if (!allocated)
+		allocated = &my_allocated;
+	if (!*allocated)
+		clear_glob (pglob);
 
 	cache = update_directory_cache (path);
 	if (!cache) {
@@ -232,7 +235,12 @@ static void match_in_directory (const char *path, const char *pattern, int opts,
 
 	debug ("globbing pattern in %s: %s\n", path, pattern);
 
-	pglob->gl_pathv = XNMALLOC (allocated, char *);
+	if (!*allocated) {
+		*allocated = 4;
+		pglob->gl_pathv = XNMALLOC (*allocated, char *);
+		pglob->gl_pathv[0] = NULL;
+	}
+
 	if (opts & LFF_REGEX)
 		flags = REG_EXTENDED | REG_NOSUB |
 			((opts & LFF_MATCHCASE) ? 0 : REG_ICASE);
@@ -251,7 +259,6 @@ static void match_in_directory (const char *path, const char *pattern, int opts,
 				     &pattern_compare);
 		if (!bsearched) {
 			free (pattern_start.pattern);
-			pglob->gl_pathv[0] = NULL;
 			return;
 		}
 		while (bsearched > cache->names &&
@@ -275,10 +282,10 @@ static void match_in_directory (const char *path, const char *pattern, int opts,
 
 		debug ("matched: %s/%s\n", path, cache->names[i]);
 
-		if (pglob->gl_pathc >= allocated) {
-			allocated *= 2;
+		if (pglob->gl_pathc >= *allocated) {
+			*allocated *= 2;
 			pglob->gl_pathv = xnrealloc (
-				pglob->gl_pathv, allocated, sizeof (char *));
+				pglob->gl_pathv, *allocated, sizeof (char *));
 		}
 		pglob->gl_pathv[pglob->gl_pathc++] =
 			appendstr (NULL, path, "/", cache->names[i], NULL);
@@ -289,10 +296,10 @@ static void match_in_directory (const char *path, const char *pattern, int opts,
 	else
 		free (pattern_start.pattern);
 
-	if (pglob->gl_pathc >= allocated) {
-		allocated *= 2;
+	if (pglob->gl_pathc >= *allocated) {
+		*allocated *= 2;
 		pglob->gl_pathv = xnrealloc (pglob->gl_pathv,
-					     allocated, sizeof (char *));
+					     *allocated, sizeof (char *));
 	}
 	pglob->gl_pathv[pglob->gl_pathc] = NULL;
 
@@ -331,25 +338,26 @@ char **look_for_file (const char *hier, const char *sec,
 
 	/* allow lookups like "3x foo" to match "../man3/foo.3x" */
 
-	if ((layout & LAYOUT_GNU) && CTYPE (isdigit, *sec) && sec[1] != '\0') {
-		path = appendstr (path, hier, cat ? "/cat" : "/man", "\t",
-				  NULL);
-		*strrchr (path, '\t') = *sec;
-		pattern = make_pattern (name, sec, opts);
+	if (layout & LAYOUT_GNU) {
+		glob_t dirs;
+		size_t i;
+		size_t allocated = 0;
 
-		match_in_directory (path, pattern, opts, &gbuf);
+		memset (&dirs, 0, sizeof (dirs));
+		pattern = appendstr (NULL, cat ? "cat" : "man", "\t*", NULL);
+		*strrchr (pattern, '\t') = *sec;
+		match_in_directory (hier, pattern, LFF_MATCHCASE, &dirs, NULL);
 		free (pattern);
-	}
 
-	if ((layout & LAYOUT_GNU) && gbuf.gl_pathc == 0) {
-		if (path)
-			*path = '\0';
-		path = appendstr (path, hier, cat ? "/cat" : "/man", sec,
-				  NULL);
 		pattern = make_pattern (name, sec, opts);
-
-		match_in_directory (path, pattern, opts, &gbuf);
+		for (i = 0; i < dirs.gl_pathc; ++i) {
+			if (path)
+				*path = '\0';
+			match_in_directory (dirs.gl_pathv[i], pattern, opts,
+					    &gbuf, &allocated);
+		}
 		free (pattern);
+		globfree (&dirs);
 	}
 
 	/* Try HPUX style compressed man pages */
@@ -360,7 +368,7 @@ char **look_for_file (const char *hier, const char *sec,
 				  sec, ".Z", NULL);
 		pattern = make_pattern (name, sec, opts);
 
-		match_in_directory (path, pattern, opts, &gbuf);
+		match_in_directory (path, pattern, opts, &gbuf, NULL);
 		free (pattern);
 	}
 
@@ -375,7 +383,7 @@ char **look_for_file (const char *hier, const char *sec,
 		else
 			pattern = appendstr (NULL, name, ".*", NULL);
 
-		match_in_directory (path, pattern, opts, &gbuf);
+		match_in_directory (path, pattern, opts, &gbuf, NULL);
 		free (pattern);
 	}
 
@@ -388,7 +396,7 @@ char **look_for_file (const char *hier, const char *sec,
 				  NULL);
 		pattern = make_pattern (name, sec, opts);
 
-		match_in_directory (path, pattern, opts, &gbuf);
+		match_in_directory (path, pattern, opts, &gbuf, NULL);
 		free (pattern);
 	}
 
@@ -407,7 +415,7 @@ char **look_for_file (const char *hier, const char *sec,
 			path = appendstr (path, hier, "/man", sec, NULL);
 			pattern = make_pattern (name, sec, opts);
 		}
-		match_in_directory (path, pattern, opts, &gbuf);
+		match_in_directory (path, pattern, opts, &gbuf, NULL);
 		free (pattern);
 	}
 
