@@ -28,6 +28,10 @@ Major changes since man-db 2.5.6:
 	  appropriate part of the manpath, rather than just trying to format
 	  the text of the executable as a manual page.
 
+	o In the GNU manual hierarchy layout, search man<sec><ext>
+	  directories as well as just man<sec> (e.g. /usr/share/man/man3p as
+	  well as /usr/share/man/man3).
+
 man-db 2.5.6 (26 August 2009)
 =============================
 
